@@ -6,6 +6,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 
 3.41	2013-??-??
 	* Background layer position now can be changed via Ctrl+arrows or layers window spinbuttons, like any other layer
+	* Shift and Shift+Ctrl now constrain selection box width/height when resizing it by clicking and dragging
 	* New image format PMM (Portable MultiMap) added for interoperable storage and exchange of images : See handbook section A.2 for details
 	* XPM files with 65-92 colours are now saved with smaller size
 	* Committing paste when changing tool is now enabled by default
